--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -55,6 +55,7 @@
         android:layout_marginTop="68dp" >
 
         <RelativeLayout
+            android:id="@+id/loginLayout"
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
