--- a/app/src/main/res/layout/activity_rider.xml
+++ b/app/src/main/res/layout/activity_rider.xml
@@ -22,7 +22,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
                 <TextView
-                    android:text="Drive"
+                    android:text="Ride"
                     android:id="@+id/schedule_a_ride"
                     android:textSize="17sp"
                     android:textStyle="bold"
