--- a/app/src/main/res/layout/activity_rides_found_show_on_map_for_driver.xml
+++ b/app/src/main/res/layout/activity_rides_found_show_on_map_for_driver.xml
@@ -31,12 +31,15 @@
             android:layout_weight="15"
             android:background="@color/colorPrimaryDark">
 
-
-            <fragment
-                android:id="@+id/fragment"
-                android:name="com.example.sharencare.Fragments.RideOptionsFragment"
+            <android.support.v4.view.ViewPager
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
+                android:layout_height="wrap_content"
+                android:id="@+id/driver_fragment_container">
+
+            </android.support.v4.view.ViewPager>
+
+
+
         </RelativeLayout>
 
 
