--- a/app/src/main/res/layout/activity_rides_found_show_on_map_for_rider.xml
+++ b/app/src/main/res/layout/activity_rides_found_show_on_map_for_rider.xml
@@ -18,7 +18,7 @@
             android:layout_weight="85">
 
             <com.google.android.gms.maps.MapView xmlns:android="http://schemas.android.com/apk/res/android"
-                android:id="@+id/user_list_map"
+                android:id="@+id/map_view_rider"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent" />
         </RelativeLayout>
@@ -31,7 +31,12 @@
             android:layout_weight="15"
             android:background="@color/colorPrimaryDark">
 
+           <android.support.v4.view.ViewPager
+               android:layout_width="wrap_content"
+               android:layout_height="wrap_content"
+               android:id="@+id/rider_fragment_container">
 
+           </android.support.v4.view.ViewPager>
 
         </RelativeLayout>
 
